# pyfll

./: .gitignore  COPYING  README  README.md  TODO  conf  fll  fll.conf  fll.py  gpthybrid  pyfll  pyfll.py  pyproject.toml  setup.py
.pc/: applied-patches
.pc/01_pyfll.patch/: pyfll
.pc/03_readme.patch/: README
.pc/05_fll_conf.patch/: fll.conf
contrib/: bm2ini  get-kde4-pinning.sh  preferences
data/: fll_init_blacklist  fll_init_whitelist  fll_sqfs_exclusion  grub.cfg  grub.efi.cfg  grub.kbd.cfg  grub.lang.cfg  grub.locale.cfg  grub.tz.cfg  inittab  locales-pkg-map  locales2grub  menu.lst.cpu  ofboot.b  postinst  sources.list
data/locales/: de_DE  el_GR  en_IE  en_US  keyboards  nl_NL
data/tz/: Africa  America  Americas  Asia  Atlantic  Australia  Etc  Europe  Pacific
debian/: changelog  control  copyright  manpages  rules
doc/: Makefile  fll.8.de.txt  fll.8.txt
doc/de/: Makefile  (+1 more)
profiles/: budgie  budgie-full  cinnamon  cinnamon-full  cinnamon-lite  dvd-stripped  gnome  gnome-stripped  hyprland-lite  kde-full  kde-lite  kde-stripped  kodi  labwc  lxqt  lxqt-compositors  lxqt-lite  lxqt-stripped  mate  mate-stripped  sway  xfce  xfce-lite
pyfll/: apt.py  bootloader.py  builder.py  chroot.py  exceptions.py  gpt.py  grublocale.py  isodd.py  locales.py  profile.py  util.py
share/: fll.conf.spec  fll.module.spec  fll.profile.spec
tests/: test_apt.py  test_bootloader.py  test_builder.py  test_chroot.py  test_gpt.py  test_grublocale.py  test_isodd_errors.py  test_isodd_patchers.py  test_isodd_persist.py  test_locales.py  test_profile.py  test_util.py
(+117 files in other folders)
