[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfll"
version = "2026.01"
description = "F*** Live Linux media mastering utility"
requires-python = ">=3.11"
dependencies = [
    "configobj",
    "python-debian",
]

[project.scripts]
pyfll     = "pyfll.builder:main"
gpthybrid = "pyfll.gpt:main"
isodd     = "pyfll.isodd:main"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
script-files = ["fll"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyfll*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
